fillmap, move es break fix